Fri Jun 17 12:47:24 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/step-by-step.html:
          Update. Started rewriting Assemble.

        * examples/Null_Component/Null_Component.mpc:
        * examples/Null_Component_Glfa/Null_Component.mpc:
          Let the TAO IDL compiler generate the executor files.

        * examples/Null_Component/Null_Component_exec.h:
        * examples/Null_Component/Null_Component_exec.cpp:
        * examples/Null_Component/plan.h:
        * examples/Null_Component_Glfa/Null_Component_exec.h:
        * examples/Null_Component_Glfa/Null_Component_exec.cpp:
          Removed since the TAO IDL compiler generates these files 
          on the fly.

        * examples/Philosophers:
        * examples/Philosophers/Philosophers.idl:
        * examples/Philosophers/README:
          Removed these files.

Fri Jun 17 12:21:03 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/step-by-step.html:
          Describing ccm_noevent in default.features. Made an extra
          link to the description of "starter".

        * examples/Hello/descriptors/Domain.cdd:
        * examples/Hello/descriptors/Hello.pcd:
        * examples/Hello/descriptors/package.tpd:
        * examples/Hello/descriptors/svc_em.conf:
          Removed these files since they may confuse the user.

Fri Jun 17 11:52:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/Hello_Base/Hello_Base.mpc:
        * examples/Hello/Receiver/Receiver.mpc:
        * examples/Hello/Sender/Sender.mpc:
          Regenerated, using the -e option in generate_component_mpc.
          We're using events in this example.

        * examples/Hello/step-by-step.html:
          Added the -e option to the description of generate_component_mpc.

Fri Jun 17 11:33:44 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/descriptors/PlanLocality_DifferentProcesses.cdp:
        * examples/Hello/descriptors/PlanLocality_SameProcess.cdp: